# Cuda_Attention_Suite

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  pytest.ini  setup.py
PyCuAttention/: __init__.py  experiment.ipynb
PyCuAttention/kernels/: __init__.py  loader.py
PyCuAttention/ops/: attention.py
benchmarks/: experiment.ipynb  hardware_constants.py  memory_coalescing.cu  timing_profile.py
benchmarks/harness/: __init__.py  baselines.py  cases.py  reporting.py  runner.py
benchmarks/kernels/: __init__.py
benchmarks/kernels/attention/: __init__.py  sweep.py
benchmarks/kernels/primitives/: __init__.py  matmul.py  softmax.py
benchmarks/profiling/: __init__.py  common.py
benchmarks/profiling/ncu/: __init__.py  parse_csv.py  run.sh  target.py
benchmarks/profiling/nsys/: __init__.py  run.sh  target.py
benchmarks/runners/: _ncu_target.py  run_bench.py  run_compare.py  run_ncu.sh  run_timing.py
benchmarks/utils/: bench_core.py  flop_counter.py  timer.py
csrc/: bindings.cpp
csrc/attention/core/sdpa/naive/: naive_fwd.h  naive_kernel.cu
csrc/attention/naive_v1/: naive_fwd.h  naive_kernel.cu
csrc/bindings/: attention_core.cpp  primitives.cpp  register.h  runtime.cpp
csrc/primitives/matmul/: matmul.cu  matmul.h
csrc/utils/: cuda_check.cuh
scripts/: build.sh
src/attention_variants/backends/: __init__.py
src/attention_variants/backends/cuda/: __init__.py  loader.py
tests/: conftest.py  test_numerical_parity.py
tests/benchmarks/: test_cli_smoke.py  test_harness_metrics.py  test_reporting.py
tests/cuda/: test_cuda_check.cu
tests/parity/: test_attention_variants_matmul.py  test_attention_variants_naive_attention.py
