[build-system]
requires = ["setuptools", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "Attention_Variants"
version = "0.1.0"
description = "A hierarchy of optimized CUDA Attention kernels."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "numpy",
]

[tool.setuptools]
package-dir = {"" = "src","benchmarks" = "benchmarks"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["benchmarks"]
